# func-hash

./: .gitignore  README.md  pyproject.toml
src/func_hash/: __init__.py
tests/: test_logic.py
